# Portfolio

./: README.md  o
AwsLambda/: Makefile  README.md
CloudApps/: README.md
Dox/: _template.html  applications.html  cli.html  commandline.html  development.html  dns.html  gadgets.html  git.html  go.html  hjulskifte.html  index.html  ionic.html  jira.html  mssql.html  openssl.html  openvpn.html  ravendb30.html  sierraos.html  software.html  subsonic.html
Ethereum/: Greeter.sol  LINKS  init.sh
Games/: Makefile  README.md  sample-gitignore
LambdaFunctions/: Makefile  README.md  sample-gitignore
LinuxSetup/: after-kernel-upgrade.sh  disable-screen-rotation.sh  doc-sync.sh  init-vim.sh  jpginfo  localsync.sh  mk-musica.sh  ourlife-sync.sh  repo  restore.sh  sdsync.sh  skakblad.sh
LunaHSMSign/: LunaHSMSign.sln  README.md
Scripts/: avi2mpg  backup-excludes.txt  backup-files.txt  backup.sh  ca.sh  count  extract-exif.sh  gencerts.sh  git-dl.sh  mkvtomp4  (+25 more)
c/qmta/: DNL_BSC.CONF  Makefile.in  configure.in  maillog  spool
c/qmta/docs/: StatusCodes
c/qmta/include/savi/: csavi2c.h  isavi2.h  savichar.h  savitype.h
c/qmta/libqmta/: debug.c  domain.c  errors.c  mail.c  main.c  mxlist.c  net.c  preferences.c  private.h  process.c  recipients.c  sendmail.c  session.c  smtp.c  system.c  text.asc
c/qmta/qinputd/: brain.c  child.c  text.asc
c/qmta/qmkdb/: access.c
c/qmta/qoutputd/: main.c
c/qmta/qscand/: child.c  munpack.c
c/qmta/qtools/: qcntldump.c  qmta.in  qqueuecu.in  qsophos.c  qwebctl.in
c/qmta/support/: VIRUSINFECTED  qmta.cnf
c/qmta/test/: fakemail
(+1582 files in other folders)
